--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - run: |
         echo '${{ steps.issue-parser.outputs.jsonString }}' > bug-details.json
         string=$(jq '.tweet' bug-details.json)
-        echo ${string:1:-1} >> tweets/${{ github.event.issue.number }}.tweet
+        echo ${string:1:-1} > tweets/${{ github.event.issue.number }}.tweet
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
