--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,18 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    # github-issue-parser parses issue and echo json output to tweet.json
     - name: Run Issue form parser
       uses: stefanbuck/github-issue-parser@v2
       id: issue-parser
       with:
-        template-path: .github/ISSUE_TEMPLATE/new-tweet-request.yaml
+        template-path: .github/ISSUE_TEMPLATE/new-tweet-request.yml
+    # parse tweet.json and echo the required data to .tweet file
     - run: |
-        echo '${{ steps.issue-parser.outputs.jsonString }}' > bug-details.json
-        string=$(jq '.tweet' bug-details.json)
+        echo '${{ steps.issue-parser.outputs.jsonString }}' > tweet.json
+        string=$(jq '.Tweet' tweet.json)
         echo ${string:1:-1} > tweets/${{ github.event.issue.number }}.tweet
+    # create-pull-request commits the .tweet file and opens a PR
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
