--- a/.github/ISSUE_TEMPLATE/new-tweet-request.yml
+++ b/.github/ISSUE_TEMPLATE/new-tweet-request.yml
@@ -17,8 +17,8 @@ body:
     label: Caution
     attributes:
       options: 
-        label: This tweet follows the 280 characters limit 
-        required: true
+       - label: This tweet follows the 280 characters limit 
+       - required: true
   - type: textarea
     attributes:
       label: Why you want to tweet this?
